# docs/swagger.yaml
@@ -57,6 +57,8 @@ paths:
           description: Internal Server Error
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Удалить чат
       tags:
       - chats
@@ -82,6 +84,8 @@ paths:
           description: Internal Server Error
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Получить чат
       tags:
       - chats
@@ -110,6 +114,8 @@ paths:
           description: Internal Server Error
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Создать чат
       tags:
       - chats
@@ -138,6 +144,8 @@ paths:
           description: Internal Server Error
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Получить все чаты пользователя
       tags:
       - chats
@@ -195,6 +203,8 @@ paths:
           description: Internal Server Error
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Удалить сообщение
       tags:
       - messages
@@ -223,6 +233,8 @@ paths:
           description: Internal Server Error
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Отправить сообщение
       tags:
       - messages
@@ -251,6 +263,8 @@ paths:
           description: Internal Server Error
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Обновить сообщение
       tags:
       - messages
@@ -279,6 +293,8 @@ paths:
           description: Internal Server Error
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Получить сообщения чата
       tags:
       - messages
@@ -311,6 +327,8 @@ paths:
           description: Internal Server Error
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Искать сообщения по содержимому
       tags:
       - messages
@@ -384,9 +402,16 @@ paths:
           description: Internal Server Error
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Получить всех пользователей
       tags:
       - users
 schemes:
 - http
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
